[package]
name = "one-engine"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0.93"
async-trait = "0.1.83"
tokio = { version = "1.41.1", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1.16"
tracing = "0.1.41"
dotenv = "0.15.0"

alloy = { version = "0.2", features = [
    "providers",
    "provider-ws",
    "transports",
    "transport-http",
    "transport-ws",
    "pubsub",
    "rpc-types-mev",
] }

[[bin]]
name = "demo"
path = "bin/demo/main.rs"
